--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vscode-typescript-angular-plugin",
-    "version": "0.800.0",
+    "version": "0.800.3",
     "repository": {
         "type": "git",
         "url": "https://github.com/andrius-pra/vscode-typescript-angular-plugin"
@@ -41,5 +41,8 @@
     "devDependencies": {
         "vscode": "^1.1.34",
         "vsce": "^1.62.0"
+    },
+    "peerDependencies": {
+        "diff":"4.0.1"
     }
 }
