--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vscode-typescript-angular-plugin",
-    "version": "0.800.3",
+    "version": "0.800.5",
     "repository": {
         "type": "git",
         "url": "https://github.com/andrius-pra/vscode-typescript-angular-plugin"
@@ -24,6 +24,7 @@
         "typescriptServerPlugins": [
             {
                 "name": "@angular/language-service",
+                "enableForWorkspaceTypeScriptVersions": true,
                 "languages": [
                     "html"
                 ]
@@ -36,7 +37,7 @@
         "dist": "vsce package"
     },
     "dependencies": {
-        "@angular/language-service": "^8.0.0"
+        "@angular/language-service": "8.0.2"
     },
     "devDependencies": {
         "vscode": "^1.1.34",
