--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vscode-typescript-angular-plugin",
-    "version": "0.800.5",
+    "version": "0.800.6",
     "repository": {
         "type": "git",
         "url": "https://github.com/andrius-pra/vscode-typescript-angular-plugin"
@@ -8,7 +8,7 @@
     "publisher": "andrius-pra",
     "author": "andrius-pra",
     "engines": {
-        "vscode": "^1.34.0"
+        "vscode": "^1.35.0"
     },
     "categories": [
         "Programming Languages"
@@ -20,6 +20,10 @@
         "html",
         "multi-root ready"
     ],
+    "main": "extension/dist/extension.js",
+    "activationEvents": [
+		"onLanguage:html"
+	],
     "contributes": {
         "typescriptServerPlugins": [
             {
@@ -32,18 +36,20 @@
         ]
     },
     "scripts": {
+        "vscode:prepublish": "tsc -p ./extension",
         "update-vscode": "vscode-install",
         "postinstall": "vscode-install",
-        "dist": "vsce package"
+        "dist": "tsc -p ./extension/ && vsce package"
     },
     "dependencies": {
-        "@angular/language-service": "8.0.2"
+        "@angular/language-service": "8.0.3"
     },
     "devDependencies": {
+        "typescript": "3.5.2",
         "vscode": "^1.1.34",
         "vsce": "^1.62.0"
     },
     "peerDependencies": {
-        "diff":"4.0.1"
+        "diff": "4.0.1"
     }
 }
