--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vscode-typescript-angular-plugin",
-    "version": "0.800.7",
+    "version": "0.900.0-next.4",
     "repository": {
         "type": "git",
         "url": "https://github.com/andrius-pra/vscode-typescript-angular-plugin"
@@ -8,7 +8,7 @@
     "publisher": "andrius-pra",
     "author": "andrius-pra",
     "engines": {
-        "vscode": "^1.35.0"
+        "vscode": "^1.36.0"
     },
     "categories": [
         "Programming Languages"
@@ -42,12 +42,12 @@
         "dist": "tsc -p ./extension/ && vsce package"
     },
     "dependencies": {
-        "@angular/language-service": "8.0.3"
+        "@angular/language-service": "https://npmpackages.blob.core.windows.net/andrius-pra/language-service-9.0.0-next.4-experimental.tgz"
     },
     "devDependencies": {
-        "typescript": "3.5.2",
-        "vscode": "^1.1.34",
-        "vsce": "^1.62.0"
+        "typescript": "3.6.2",
+        "vscode": "^1.1.36",
+        "vsce": "^1.66.0"
     },
     "peerDependencies": {
         "diff": "^4.0.1"
