--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vscode-typescript-angular-plugin",
-    "version": "0.900.0-next.6",
+    "version": "0.900.0-next.7",
     "repository": {
         "type": "git",
         "url": "https://github.com/andrius-pra/vscode-typescript-angular-plugin"
@@ -42,12 +42,12 @@
         "dist": "tsc -p ./extension/ && vsce package"
     },
     "dependencies": {
-        "@angular/language-service": "https://npmpackages.blob.core.windows.net/andrius-pra/language-service-9.0.0-next.6+82.sha-736e3e0-experimental.tgz"
+        "@angular/language-service": "https://npmpackages.blob.core.windows.net/andrius-pra/language-service-9.0.0-next.7+23.sha-3234872-experimental.tgz"
     },
     "devDependencies": {
         "typescript": "https://npmpackages.blob.core.windows.net/andrius-pra/typescript-3.6.2-experimental-plugin-external-files.20190829.tgz",
-        "vscode": "^1.1.36",
-        "vsce": "^1.66.0"
+        "vsce": "^1.66.0",
+        "vscode": "^1.1.36"
     },
     "peerDependencies": {
         "diff": "^4.0.1"
