--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "vscode-typescript-angular-plugin",
-    "version": "0.900.0-next.10",
+    "version": "0.900.0-next.14",
+    "icon": "angular.png",
+    "description": "Typescript plugin for angular templates",
     "repository": {
         "type": "git",
         "url": "https://github.com/andrius-pra/vscode-typescript-angular-plugin"
@@ -42,11 +44,11 @@
         "dist": "tsc -p ./extension/ && vsce package"
     },
     "dependencies": {
-        "@angular/language-service": "https://npmpackages.blob.core.windows.net/andrius-pra/language-service-9.0.0-next.10+55.sha-8f70d7e-experimental.tgz"
+        "@angular/language-service": "https://npmpackages.blob.core.windows.net/andrius-pra/language-service-9.0.0-next.14+10.sha-f3adfd8-experimental.tgz"
     },
     "devDependencies": {
-        "typescript": "https://npmpackages.blob.core.windows.net/andrius-pra/typescript-3.6.2-experimental-plugin-external-files.20190829.tgz",
-        "vsce": "^1.66.0",
+        "typescript": "https://npmpackages.blob.core.windows.net/andrius-pra/typescript-3.7.1-experimental-plugin-external-files.20191026.tgz",
+        "vsce": "^1.68.0",
         "vscode": "^1.1.36"
     },
     "peerDependencies": {
